# photonr

./: Cargo.toml  README.md  build.rs  scene.json
opencl/: camera.cl
src/: camera.rs  cli.rs  json.rs  lib.rs  main.rs  material.rs  math.rs  world.rs
