[package]
name = "photonr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
parry3d = "0.13.5"
nalgebra = {version= "*", features=["serde-serialize"]}
anyhow = "1.0.75"
rayon = "1.8.0"
rand = "0.8.5"
clap = { version= "4.4.7", features= ["derive"]}
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
encoding_rs = "0.8.33"
